--- a/Ipl score.html
+++ b/Ipl score.html
@@ -1,83 +1,32 @@
-Large amount of assets
--Example - How to budget is not part of the course
--Template - for budgeting 
--Know more about video games 
 
-
-
-Chel.cmml@gmail.com
-vanesabparedes@gmail.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live IPL Score</title>
+    <title>Stump Mic - Live IPL Score</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f8f9fa;
-        }
-        .score-widget {
-            width: 400px;
-            height: 300px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            background-color: #101820;
+            color: #ffffff;
+            text-align: center;
             padding: 20px;
-            background-color: white;
-            border-radius: 8px;
+        }
+        h1 {
+            color: #f2aa4c;
+        }
+        iframe {
+            margin-top: 20px;
+            border: none;
+            width: 90%;
+            height: 600px;
         }
     </style>
 </head>
 <body>
-    <div class="score-widget">
-        <h2 style="text-align: center;">Live IPL Score</h2>
-        <!-- CricketData.org free live match widget -->
-        <script src="https://cdorgapi.b-cdn.net/widgets/vmatchlist.js"></script>
-    </div>
+    <h1>🏏 Stump Mic - Live IPL Scoreboard</h1>
+    <p>Stay updated with real-time IPL scores, powered by ESPNCricinfo.</p>
+    <iframe src="https://www.espncricinfo.com/series/ipl-2025-1449924/live-cricket-score" title="IPL 2025 Live Score"></iframe>
 </body>
 </html>
-
-
-"(555) 123-4567", "(555) 234-5678", "(555) 345-6789", "(555) 456-7890", "(555) 567-8901", 
-        "(555) 678-9012", "(555) 789-0123", "(555) 890-1234", "(555) 901-2345", "(555) 012-3456", 
-        "(555) 123-4568", "(555) 234-5679", "(555) 345-6780", "(555) 456-7891", "(555) 567-8902", 
-        "(555) 678-9013", "(555) 789-0124", "(555) 890-1235", "(555) 901-2346", "(555) 012-3457", 
-        "(555) 123-4569", "(555) 234-5680", "(555) 345-6791", "(555) 456-7802", "(555) 567-8913", 
-        "(555) 678-9024", "(555) 789-0135", "(555) 890-1246", "(555) 901-2357", "(555) 012-3468", 
-        "(555) 123-4570", "(555) 234-5681", "(555) 345-6792", "(555) 456-7803", "(555) 567-8914", 
-        "(555) 678-9025", "(555) 789-0136", "(555) 890-1247", "(555) 901-2358", "(555) 012-3469", 
-        "(555) 123-4571", "(555) 234-5682", "(555) 345-6793", "(555) 456-7804", "(555) 567-8915", 
-        "(555) 678-9026", "(555) 789-0137", "(555) 890-1248", "(555) 901-2359", "(555) 012-3470", 
-        "(555) 123-4572", "(555) 234-5683", "(555) 345-6794", "(555) 456-7805", "(555) 567-8916", 
-        "(555) 678-9027", "(555) 789-0138", "(555) 890-1249", "(555) 901-2360", "(555) 012-3471", 
-        "(555) 123-4573", "(555) 234-5684", "(555) 345-6795", "(555) 456-7806", "(555) 567-8917", 
-        "(555) 678-9028", "(555) 789-0139", "(555) 890-1250", "(555) 901-2361", "(555) 012-3472", 
-        "(555) 123-4574", "(555) 234-5685", "(555) 345-6796", "(555) 456-7807", "(555) 567-8918", 
-        "(555) 678-9029", "(555) 789-0140", "(555) 890-1251", "(555) 901-2362", "(555) 012-3473", 
-        "(555) 123-4575", "(555) 234-5686", "(555) 345-6797", "(555) 456-7808", "(555) 567-8919", 
-        "(555) 678-9030", "(555) 789-0141", "(555) 890-1252", "(555) 901-2363", "(555) 012-3474", 
-        "(555) 123-4576", "(555) 234-5687", "(555) 345-6798", "(555) 456-7809", "(555) 567-8920", 
-        "(555) 678-9031", "(555) 789-0142", "(555) 890-1253", "(555) 901-2364", "(555) 012-3475"
-    ],
-    "Email": [
-        "emma.johnson@example.com", "liam.brown@example.com", "olivia.smith@example.com", "noah.davis@example.com", 
-        "ava.wilson@example.com", "william.martinez@example.com", "sophia.anderson@example.com", "james.taylor@example.com", 
-        "isabella.thomas@example.com", "benjamin.white@example.com", "mia.harris@example.com", "lucas.clark@example.com", 
-        "charlotte.lewis@example.com", "henry.walker@example.com", "amelia.hall@example.com", "alexander.young@example.com", 
-        "harper.allen@example.com", "ethan.king@example.com", "evelyn.scott@example.com", "michael.green@example.com", 
-        "abigail.adams@example.com", "daniel.baker@example.com", "emily.nelson@example.com", "matthew.carter@example.com", 
-        "elizabeth.perez@example.com", "samuel.roberts@example.com", "sofia.turner@example.com", "david.phillips@example.com", 
-        "avery.campbell@example.com", "joseph.parker@example.com", "ella.evans@example.com", "charles.edwards@example.com", 
-        "madison.collins@example.com", "christopher.stewart@example.com", "scarlett.sanchez@example.com", "anthony.morris@example.com", 
-        "grace.rivera@example.com", "andrew.cook@example.com", "chloe.morgan@example.com", "joshua.reed@example.com", 
-        "aria.rogers@example.com", "ryan.bell@example.com", "victoria.murphy@example.com", "jacob.cooper@example.com", 
-        "lily.bailey@example.com", "nathan.ward@example.com", "zoey.gray@example.com", "john.hughes@example.com", 
-        "natalie.price@example.com", "carter.sanders@example.com", "grace.foster@example.com", "jack.powell@example.com", 
-        "hannah.patterson@example.com", "dylan.bennett@example.com", "violet.howard@example.com", "caleb.jenkins@example.com", 
-        "penelope.perry@example.com", "luke.russell@example.com", "audrey.henderson@example.com", "isaac.shaw@example.com", 
-        "leah.hamilton@example.com", "owen.graham@example.com", "hannah.fisher@example.com", "sebastian.peterson@example.com", 
