--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>🏏 Stump Mic - Live IPL Scoreboard</h1>
-    <p>Stay updated with real-time IPL scores, powered by ESPNCricinfo.</p>
+    <p>Stay updated with real-time IPL scores, powered by Stump Mic Cricket Predictions.</p>
     <iframe src="https://www.espncricinfo.com/series/ipl-2025-1449924/live-cricket-score" title="IPL 2025 Live Score"></iframe>
 </body>
 </html>
